--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,4 +34,6 @@
     {{ include_to_scssify | scssify }}
   </style>
 
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
 </head>
