--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,16 @@ layout: default
 
 <section class="post">
   <h2>{{ page.title }}</h2>
+  <p class="kicker">{{page.description }}</p>
   {{ content }}
-  <span class="meta"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time> &middot; {% for tag in page.tags %}
-    <a href="/tag/{{tag}}">{{tag}}</a>{% unless forloop.last %}, {% endunless %}{% endfor %}</span>
+  <span class="meta">- - -<br><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y.%m.%d" }}</time> 
+    <br/>
+    {% for post_tag in page.tags %}
+      {% assign tag = site.tags | where: "slug", post_tag %}
+      {% if tag %}
+        {% assign tag = tag[0] %}
+        <a href="/tag/{{tag.slug}}">{{tag.name}}</a>{% unless forloop.last %}, {% endunless %}
+      {% endif%}
+    {% endfor %}
+  </span>
 </section>
-
-
