--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,13 +3,12 @@ layout: default
 ---
 
 <section class="posts">
-<h1>Tag #{{page.tag}}</h1>
+<h1>{{page.name}}</h1>
     <ul>
       {% for post in site.posts %}
-      {% if post.tags contains page.tag %}
-      <li><a class="post" href="{{ post.url }}">{{ post.title }}</a><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%m-%d-%Y" }}</time></li>
+      {% if post.tags contains page.slug %}
+      <li><a class="post" href="{{ post.url }}">{{ post.title }}</a><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%Y.%m.%d" }}</time></li>
       {% endif %}
       {% endfor %}
     </ul>
-	
 </section>
